--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,14 +31,14 @@
             android:label="@string/title_activity_bus_stop" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="net.fosstveit.atbuss.AtBussActivity" />
+                android:value="net.fosstveit.atbuss.MainActivity" />
         </activity>
         <activity
             android:name="net.fosstveit.atbuss.SearchActivity"
             android:label="@string/title_activity_search" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="net.fosstveit.atbuss.AtBussActivitys" />
+                android:value="net.fosstveit.atbuss.MainActivity" />
         </activity>
         <activity
             android:name="net.fosstveit.atbuss.BusEventActivity"
@@ -52,14 +52,14 @@
             android:label="@string/title_activity_settings" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="net.fosstveit.atbuss.AtBussActivity" />
+                android:value="net.fosstveit.atbuss.MainActivity" />
         </activity>
         <activity
             android:name="net.fosstveit.atbuss.AskOracleActivity"
             android:label="@string/title_activity_ask_oracle" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="net.fosstveit.atbuss.AtBussActivity" />
+                android:value="net.fosstveit.atbuss.MainActivity" />
         </activity>
 
         <receiver android:name="net.fosstveit.atbuss.utils.BusEventAlarm" />
