--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:19.0.+'
+    compile "com.android.support:appcompat-v7:19.0.+"
     compile ('com.googlecode.json-simple:json-simple:1.1.1') {
         exclude module: 'junit'
     }
